smooth img post hover

--- a/css/style.css
+++ b/css/style.css
@@ -10289,6 +10289,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 }
 .image img.post-img:hover {
   opacity: 0.8;
+  transition: 0.3s linear;
 }
 
 .navbar-item.is-active::after {
