--- a/sass/style.sass
+++ b/sass/style.sass
@@ -37,6 +37,7 @@ $navbar-item-hover-color: $primary_clr
 
     &.post-img:hover
       opacity: 0.8
+      transition: 0.3s linear
 
 .navbar-item
   &.is-active
